# binance

./: Cargo.toml  README.md  request.txt  single.txt
.github/workflows/: main.yml
benches/: parsing.rs
src/: custom.rs  custom_lazy.rs  lazy.rs  lazy_sonic.rs  lib.rs  main.rs  serde.rs  serde_borrowed.rs  serde_lazy.rs  sonic.rs  utils.rs  very_lazy.rs
