[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sonic-rs = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parsing"
harness = false
